Fixing Bugs within Sign-Up-And-Sign-Out-Page > Sign-Up component, Problem with the alignment and size of the components as shown in the course - TOR

--- a/src/pages/sign-in-sign-up/sign-in-sign-up.scss
+++ b/src/pages/sign-in-sign-up/sign-in-sign-up.scss
@@ -1,5 +1,9 @@
 .sign-in-and-sign-up {
     width: 850px;
     display: flex;
+    /*
+    Maybe here goes a 
+    justify-content: space-around;
+    */
     margin: 30px auto;
 }
